test/valid/41625_DownCast/A.plume
/**
 * Valid Class.
 * Nothing to see here...
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 class A extends Object is 
 
 	method  fa : () -> String is 
 		"A" 